--- a/theme/static/css/style.css
+++ b/theme/static/css/style.css
@@ -5579,10 +5579,10 @@ a.product-button i {
 
 .product-price,
 .product-price-discount {
-    font-size: 16px;
-    font-weight: 700;
+    font-size: 14px;
+    font-weight: 600;
     color: #606060;
-    padding: 1px 0 5px 0;
+    padding: 1px 0 1px 0;
     display: block;
 }
 
